--- a/Specrunner.html
+++ b/Specrunner.html
@@ -10,10 +10,10 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="src/convertlibrary.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/convertlibraryspec.js"></script>
+  <script type="text/javascript" src="spec/ruterspec.js"></script>
 
   <script type="text/javascript">
     (function() {
