added select2 for bootstrap

--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                     </p>
                 </aside>
 
+                <aside>
+                    <h3>Søk</h3>
+                    
+                </aside>
+
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
